# text-sed

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  setup.cfg  setup.py  train.py  train.sh
configs/: default.yaml  e2e.yaml  sed-large.yaml  sed-small.yaml
datasets/: roc_stories.py
text_sed/: diffusion.py  layers.py  slurm.py  utils.py
