[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["text_sed"] 
include = ["text_sed*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "text-sed"
version = "0.0.1"
requires-python = ">=3.8"
description = "A PyTorch implementation of Self-conditioned Embedding Diffusion"
keywords = ["nlp", "pytorch", "machine-learning", "text-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "einops",
    "torch>=1.12.1",
    "transformers",
]

[[project.authors]]
author = "Jonathan Tow"
email = "jonathantow1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = ["black", "flake8", "isort"]
train = ["datasets", "omegaconf", "wandb", "tqdm"]
