[project]
name = "text-sed"
description = "A PyTorch implementation of Self-conditioned Embedding Diffusion"
authors = [{name = "Jonathan Tow", email = "jonathantow1@gmail.com"}]
dynamic = ["version"]
requires-python = ">=3.8"
keywords = ["nlp", "pytorch", "machine-learning", "text-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "einops",
    "torch>=1.12.1",
    "transformers",
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort"]
train = ["datasets", "omegaconf", "wandb", "tqdm"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["text_sed"] 
include = ["text_sed*"]

[tool.black]
line-length = 101

[tool.isort]
profile = "black"
