[metadata]
name = text-sed
author = Jonathan Tow
author_email = jonathantow1@gmail.com
version = 0.0.1
url = https://github.com/jon-tow/text-sed
description = A PyTorch implementation of Self-conditioned Embedding Diffusion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = nlp, pytorch, machine-learning, text-generation

[options]
packages = find:
install_requires =
    einops
    numpy
    torch>=1.12.1
    transformers

[options.extras_require]
dev =
    black
    isort
    flake8
train =
    datasets
    omegaconf
    wandb
    tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    tests*
